{
  "version": 4,
  "terraform_version": "1.5.4",
  "serial": 61,
  "lineage": "452144e3-2091-f860-9651-64788470138e",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-11-08T19:12:24.443-08:00",
            "encrypted_interconnect_router": false,
            "id": "projects/terraform-gcp-404310/regions/us-central1/routers/three-tier-router",
            "name": "three-tier-router",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-404310/global/networks/three-tier-vpc",
            "project": "terraform-gcp-404310",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-404310/regions/us-central1/routers/three-tier-router"
          },
          "dependencies": [
            "module.vpc.module.vpc.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": false,
            "icmp_idle_timeout_sec": 30,
            "id": "terraform-gcp-404310/us-central1/three-tier-router/three-tier-nat",
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "three-tier-nat",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "terraform-gcp-404310",
            "region": "us-central1",
            "router": "three-tier-router",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "google_compute_router.router",
            "module.vpc.module.vpc.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.firewall_rules",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "rules_ingress_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "allow-8080",
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "8080"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-11-08T19:12:23.434-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/terraform-gcp-404310/global/firewalls/allow-8080",
            "log_config": [],
            "name": "allow-8080",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-404310/global/networks/three-tier-vpc",
            "priority": 1000,
            "project": "terraform-gcp-404310",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-404310/global/firewalls/allow-8080",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "react-app"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.google_compute_network.network"
          ]
        },
        {
          "index_key": "cloud-iap-allow",
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-11-08T19:42:08.732-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/terraform-gcp-404310/global/firewalls/cloud-iap-allow",
            "log_config": [],
            "name": "cloud-iap-allow",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-404310/global/networks/three-tier-vpc",
            "priority": 1000,
            "project": "terraform-gcp-404310",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-404310/global/firewalls/cloud-iap-allow",
            "source_ranges": [
              "35.235.240.0/20"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "react-app"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.routes",
      "mode": "managed",
      "type": "google_compute_route",
      "name": "route",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "egress-internet",
          "schema_version": 0,
          "attributes": {
            "description": "route through IGW to access internet",
            "dest_range": "0.0.0.0/0",
            "id": "projects/terraform-gcp-404310/global/routes/egress-internet",
            "name": "egress-internet",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-404310/global/networks/three-tier-vpc",
            "next_hop_gateway": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-404310/global/gateways/default-internet-gateway",
            "next_hop_ilb": "",
            "next_hop_instance": "",
            "next_hop_instance_zone": null,
            "next_hop_ip": "",
            "next_hop_network": "",
            "next_hop_vpn_tunnel": "",
            "priority": 1000,
            "project": "terraform-gcp-404310",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-404310/global/routes/egress-internet",
            "tags": [
              "egress-inet"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.subnets.google_compute_subnetwork.subnetwork",
            "module.vpc.module.vpc.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.subnets",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "us-central1/private-01",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-11-08T19:12:24.528-08:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/terraform-gcp-404310/regions/us-central1/subnetworks/private-01",
            "ip_cidr_range": "10.0.0.0/24",
            "name": "private-01",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-404310/global/networks/three-tier-vpc",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "terraform-gcp-404310",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-404310/regions/us-central1/subnetworks/private-01",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.vpc.module.vpc.google_compute_network.network"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "us-central1/private-02",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-11-08T19:12:23.526-08:00",
            "gateway_address": "10.0.1.1",
            "id": "projects/terraform-gcp-404310/regions/us-central1/subnetworks/private-02",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "private-02",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-404310/global/networks/three-tier-vpc",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "terraform-gcp-404310",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-404310/regions/us-central1/subnetworks/private-02",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.vpc.module.vpc.google_compute_network.network"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "us-west1/private-03",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-11-08T19:12:25.135-08:00",
            "gateway_address": "10.0.2.1",
            "id": "projects/terraform-gcp-404310/regions/us-west1/subnetworks/private-03",
            "ip_cidr_range": "10.0.2.0/24",
            "name": "private-03",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-404310/global/networks/three-tier-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "terraform-gcp-404310",
            "purpose": "PRIVATE",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-404310/regions/us-west1/subnetworks/private-03",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.vpc.module.vpc.google_compute_network.network"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": true,
            "enable_ula_internal_ipv6": false,
            "id": "projects/terraform-gcp-404310/global/networks/three-tier-vpc",
            "mtu": 0,
            "name": "three-tier-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "project": "terraform-gcp-404310",
            "routing_mode": "GLOBAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-404310/global/networks/three-tier-vpc"
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}